Fix collecting streams